# uw-isg-clicker-session-change

./: README.md  uw-isg-clicker-session-change.cabal
app/: Main.hs
src/: Analyze.hs  Parse.hs  Tokenize.hs
test/: Spec.hs
