name:                uw-isg-clicker-session-change
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/ylilarry/uw-isg-clicker-session-change#readme
license:             BSD3
license-file:        LICENSE
author:              Yu Li
maintainer:          y667li@uwaterloo.ca
copyright:           2016 Yu Li
category:            Tool
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Analyze
                     , Parse
                     , Tokenize
  build-depends:       base >= 4.7 && < 5
                     , regex-pcre
                     , time
                     , array
                     , mtl
  default-language:    Haskell2010

executable uw-isg-clicker-session-change-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , uw-isg-clicker-session-change
                     , mtl
  default-language:    Haskell2010

test-suite uw-isg-clicker-session-change-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , uw-isg-clicker-session-change
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ylilarry/uw-isg-clicker-session-change
